update tailwind config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
-    "tailwindcss": "^1.2.0",
+    "tailwindcss": "^1.0.0-beta.10",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
